update blog: java内存区域和内存泄漏

--- a/java内存区域与内存溢出异常/index.html
+++ b/java内存区域与内存溢出异常/index.html
@@ -161,7 +161,7 @@
 <p>本机直接内存的分配不会受到 Java 堆的限制；但是，既然是内存就会受到本机总内存大小以及处理器寻址空间的限制。</p>
 <h2 id="hotspot-">HotSpot 虚拟机对象探索</h2>
 <p>对象是如何创建的、如何布局以及如何访问的？</p>
-<h3 id="11">1.对象的创建</h3>
+<h3 id="1-">1. 对象的创建</h3>
 <ol>
 <li>
 <p>虚拟机遇到一条new指令时，首先将去检查这个指令的参数是否能在常量池中定位到一个类的符号引用，并且检查这个符号引用代表的类是否已被加载、解析和初始化过；</p>
@@ -170,7 +170,7 @@
 <p>如果没有，那必须先执行相应的类加载过程；</p>
 </li>
 <li>
-<p>在类加载检查通过后，接下来虚拟机将为新生对象分配内存。对象所需内存的大小在类加载完成后便可完全确定，为对象分配空间的任务等同于把一块确定大小的<strong>内存从Java堆中划分出来</strong>；</p>
+<p>在类加载检查通过后，接下来虚拟机将为新生对象分配内存。对象所需内存的大小在类加载完成后便可完全确定，为对象分配空间的任务等同于把一块确定大小的<strong>内存从 Java 堆中划分出来</strong>；</p>
 </li>
 <li>
 <p>内存分配完成后，虚拟机需要将分配到的内存空间都初始化为零值 (不包括对象头) ，如果使用 TLAB，这一工作过程也可以提前至 TLAB 分配时进行；</p>
@@ -183,22 +183,24 @@
 <p><strong>- 从 Java 堆分出内存：</strong></p>
 <ul>
 <li>
-<p><strong>指针碰撞</strong>：假设Java堆中内存是绝对规整的，所有用过的内存都放在一边， 空闲的内存放在另一边，中间放着一个指针作为分界点的指示器，那所分配内存就仅仅是把那个指针向空闲空间那边挪动一段与对象大小相等的距离，这种分配方式称为 “指针碰撞” (Bump the Pointer)。</p>
+<p><strong>指针碰撞</strong>：假设 Java 堆中内存是绝对规整的，所有用过的内存都放在一边， 空闲的内存放在另一边，中间放着一个指针作为分界点的指示器，那所分配内存就仅仅是把那个指针向空闲空间那边挪动一段与对象大小相等的距离，这种分配方式称为 <code>“指针碰撞” (Bump the Pointer)</code> 。</p>
 </li>
 <li>
-<p><strong>空闲列表</strong>：如果Java堆中的内存并不是规整的，已使用的内存和空闲的内存相互交错，那就没有办法简单地进行指针碰撞了，虚拟机就必须维护-个列表，记录上哪些内存块是可用的，在分配的时候从列表中找到一块足够大的空间划分给对象实例，并更新列表上的记录，这种分配方式称为 “空闲列表” (Free List)。</p>
-<p>选择哪种分配方式由Java堆是否规整决定，而Java堆是否规整又由所采用的垃圾收集器是否带有压缩整理功能决定。</p>
+<p><strong>空闲列表</strong>：如果 Java 堆中的内存并不是规整的，已使用的内存和空闲的内存相互交错，那就没有办法简单地进行指针碰撞了，虚拟机就必须维护一个列表，记录上哪些内存块是可用的，在分配的时候从列表中找到一块足够大的空间划分给对象实例，并更新列表上的记录，这种分配方式称为 <code>“空闲列表” (Free List)</code> 。</p>
+<p>选择哪种分配方式由 Java 堆是否规整决定，而 Java 堆是否规整又由所采用的垃圾收集器是否带有压缩整理功能决定。</p>
 </li>
 </ul>
-<p><strong>- 为本地线程分配缓冲 (Thread Local Allocation Buffer, TLAB)：</strong></p>
-<ul>
+<p><strong>除如何划分可用空间之外，还有另外一个需要考虑的问题：“ 对象创建在虚拟机中是非常频繁的行为，即使是仅仅修改一个指针所指向的位置，在并发情况下也并不是线程安全的，可能出现正在给对象 A 分配内存，指针还没来得及修改，对象 B 又同时使用了原来的指针来分配内存的情况 ”。</strong></p>
+<p><img src="https://github.com/OnlyThePiano/Notes/blob/master/images/image-20200720173445596.png" alt="image-20200720173445596"></p>
+<p>解决这个问题有两种方案：</p>
+<ol>
 <li>
-<p>并发情况下并不是线程安全的，可能出现正在给对象A分配内存，指针还没来得及修改，对象B又同时使用了原来的指针来分配内存的情况。</p>
+<p>一种是对分配内存空间的动作进行同步处理一实际上虚拟机采用 CAS 配上失败重试的方式保证更新操作的原子性；</p>
 </li>
 <li>
-<p>本地线程分配缓冲 (TLAB) ；哪个线程要分配内存，就在哪个线程的 TLAB 上分配，只有 TLAB 用完并分配新的FLAB时，才需要同步锁定。</p>
+<p>另一种是把内存分配的动作按照线程划分在 <code>不同的空间</code> 之中进行，即每个线程在 Java 堆中预先分配一小块内存，称为 <code>本地线程分配缓冲(Thread Local Allocation Buffer, TLAB)</code> 。 哪个线程要分配内存，就在哪个线程的 TLAB 上分配，只有 TLAB 用完并分配新的 TLAB 时，才需要同步锁定。</p>
 </li>
-</ul>
+</ol>
 <h3 id="2">2.对象的内存分布</h3>
 <p>在 HotSpot 虚拟机中，对象在内存中存储的布局可以分为 3 块区域：</p>
 <ul>
