--- a/垃圾收集器和内存分配策略/index.html
+++ b/垃圾收集器和内存分配策略/index.html
@@ -113,11 +113,12 @@
 <p>在了解了垃圾收集器体系后，再要了解的是如何给对象分配内存。</p>
 <p>对象的内存分配，往大方向讲，就是在堆上分配；</p>
 <ul>
-<li>主要分配在新生代的Eden区上；</li>
-<li>如果启动了本地线程分配缓冲，将按线程优先在 TLAB 上分配；</li>
+<li>主要分配在新生代的 Eden 区上；</li>
+<li>如果启动了本地线程分配缓冲 (TLAB) ，将按线程优先在 TLAB 上分配；</li>
 <li>少数情况下也可能会直接分配在老年代中；</li>
 </ul>
 <p>分配的规则并不是百分之百固定的，其细节取决于当前使用的是哪一种垃圾收集器组合，还有虚拟机中与内存相关的参数的设置。</p>
+<p><img src="https://github.com/OnlyThePiano/Notes/blob/master/images/image-20200720173647039.png" alt="image-20200720173647039"></p>
 <p><strong>- 分配策略：</strong></p>
 <ul>
 <li>对象优先在 Eden 分配；</li>
