update blog: Java内存区域

--- a/java内存区域与内存溢出异常/index.html
+++ b/java内存区域与内存溢出异常/index.html
@@ -84,6 +84,9 @@
 <h1 id="java">Java内层区域与内存溢出异常</h1>
 <p>对于 Java 程序员来说，在虚拟机自动内存管理机制的帮助下，不再需要为每一个 new 操作去写配对的 delete/free 代码，不容易出现内存泄漏和内存溢出问题，由虚拟机管理内存。这一切看起来都很美好。</p>
 <p>不过，也正是因为 Java 程序员把内存控制的权力交给了 Java 虚拟机，一旦出现内存泄漏和溢出方面的问题，如果不了解虚拟机是怎样使用内存的，那么排查错误将会成为一项异常艰难的工作。</p>
+<p><strong>- 对象、引用 和 指针：</strong></p>
+<p>栈内存里的引用变量并未真正存储对象的成员变量，对象的成员变量数据实际存放在堆内存里；而引用变量只是指向该堆内存里的对象。从这个角度来看，引用变量与C语言里的指针很像，它们都是存储一个地址值，通过这个地址来引用到实际对象。实际上,  <strong>Java 里的引用就是 C 里的指针，只是 Java 语言把这个指针封装起来，避免开发者进行烦琐的指针操作。</strong></p>
+<p><strong>创建对象的根本途径时构造器</strong> ，未<code>new</code> 时只是一个 <code>类类型</code>的变量；当一个对象被创建成功以后，这个对象将保存在堆内存中，Java 程序不允许直接访问堆内存中的对象，只能通过该对象的引用操作该对象。也就是说，不管是数组还是对象，都只能通过引用来访问它们。当指向为空时，Java 的 <code>gc</code> 就会回收这个对象。详细看 <a href="https://onlythepiano.github.io/%E5%9E%83%E5%9C%BE%E6%94%B6%E9%9B%86%E5%99%A8%E5%92%8C%E5%86%85%E5%AD%98%E5%88%86%E9%85%8D%E7%AD%96%E7%95%A5/">垃圾收集器和内存分配策略</a></p>
 <h2 id="heading">运行时数据区域</h2>
 <p><img src="https://onlythepiano.github.io/images/image-20200702195807225.png" alt="image-20200702195807225"></p>
 <p><img src="https://onlythepiano.github.io/images/image-20200702195838234.png" alt="image-20200702195838234"></p>
